--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.hansemerkur.victor</groupId>
-    <artifactId>maven-projekt</artifactId>
+    <artifactId>jv_ersten_programe_in_der_hanse</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
